Fixing LinkInBio spacing

--- a/src/sass/_elements.scss
+++ b/src/sass/_elements.scss
@@ -22,8 +22,13 @@ Link {
 }
 
 #section-title {
-  font-size: 1.4em;
-  margin-bottom: 10px;
+  font-size: 1.5em;
+  margin: 0;
+}
+
+#location-title {
+  font-size: .9em;
+  margin: 0 0 10px 0;
 }
 
 .link-emphasis {
