--- a/src/sass/components/inbio.scss
+++ b/src/sass/components/inbio.scss
@@ -39,8 +39,8 @@
 
   img {
     position: absolute;
-    left: -120px;
-    width: 240%;
+    left: 0px;
+    width: 120%;
     height: auto;
   }
 }
